# jsk_common-release

./: 0001-Revert-Trimmed-the-branch-to-only-the-jsk_data-sub-d.patch  0001-add-depend-to-ros-groovy-navigation.patch  0001-add-depends-to-ros-groovy-laser-filters.patch  0001-add-libjpeg-to-depends.patch  0001-add-ml_classifieres-to-depend.patch  0001-add-ros-groovy-navigation.patch  0001-axis_camera-and-pr2_computer_monotor-is-not-released.patch  0001-baxter_description-is-not-releaesd-on-jade.patch  0001-baxter_description-is-not-released-on-melodic.patch  0001-baxter_description-is-not-released-on-noetic.patch  0001-comment-out-pip-package.patch  0001-comment-out-python-sklearn-for-oneiric.patch  0001-disable-laser_assemble-and-dynamixel_controllers-for.patch  0001-dynamixel-controller-is-not-released-on-jade-yet.patch  0001-dynamixel_controllers-and-multisense_lib-are-not-rel.patch  0001-enable-depend-to-map_server-for-hydro.patch  0001-fix-for-armhf.patch  0001-groovy-uses-python.patch  0001-multi_map_server-remove-map_server-for-groovy.patch  0001-oneiric-does-not-provide-python-sklearn.patch  0001-pip-packages-need-to-removed-to-release-as-deb.patch  0001-python-percol-is-pip-package-so-you-can-use-this-in-.patch  0001-python-texttable-is-not-available-on-saucy.patch  0001-remove-depend-to-map_server-for-groovy.patch  0001-remove-ml_classifieres-from-depend.patch  0001-remove-package-not-released-on-jade.patch  0001-remove-pid-package.patch  0001-remove-pip-depends.patch  0001-remove-pip-rosdep-for-release.patch  0001-rename-rosemacs-instead-of-rosemacs-el.patch  (+36 more)
(+105 files in other folders)
