<package>
  <name>jsk_tools</name>
  <version>1.0.60</version>
  <description>Includes emacs scripts, ros tool alias generator, and launch doc generator.</description>

  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">http://ros.org/wiki/jsk_tools</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ryohei Ueda (ueda@jsk.t.u-tokyo.ac.jp)</author>
  <author>Rosen Diankov (rosen.diankov@gmail.com)</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>git</build_depend>
  <!--
This release uses a dependency on python-percol in the package
https://github.com/jsk-ros-pkg/jsk_common/blob/02b0fd487b1fa5cef967a2a875acf8564004bea2/jsk_tools/package.xml

As @wjwwood pointed out when you added the rosdep key (#6993
(comment)) you can not depend on packages which are not available from
Debian packages in your releases packages:
http://jenkins.ros.org/view/IbinT64/job/ros-indigo-multi-map-server_binarydeb_trusty_amd64/15/console
      <run_depend>python-percol</run_depend>
  -->
  <!-- <build_depend>mjpeg_server</build_depend> -->
  <!-- <run_depend>mjpeg_server</run_depend> -->
  <!-- <test_depend>mjpeg_server</test_depend> -->

</package>
